35) kernel: ralink_wifi: xxxx: port basic roaming optons support to all drivers.<br>
36) kernel: ralink_wifi: xxxx: fix uncorrect drop clietns in roma path if RTMPMaxRssi return 0.<br>
37) kernel: usb: usbnet: fix a race between usbnet_stop() and the BH.<br>
38) kernel: usb: net: qmi_wwan: Sierra Wireless MC73xx -> Sierra Wireless MC7304/MC7354.<br>
39) kernel: usb: qcserial: add HP lt4111 LTE/EV-DO/HSPA+ Gobi 4G Module.<br>
40) kernel: net: ipv6: ip6_fragment: fix headroom tests and skb leak.<br>
41) kernel: net: route: prevent oops.<br>
42) kernel: net: fix crashes on pppoe disconnect/reconnect.<br>
43) kernel: net: sch_htb: let skb->priority refer to non-leaf class.<br>
44) kernel: net: net_sched: sfq: put sfq_unlink in a do - while loop.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~98%).<br>
2) need add in UI advanced EntryLifeCheck variable (how pkts TX fail before connection drop, default 512).<br>
3) need add nodogsplash config in webui->hotspot (select chillispot or nodogsplash mode).<br>
4) need review, experiments with new roaming code in MT76x2 driver and implement to WebUI.<br>
5) need add tx beamforming parametrs in WebUi Basic if CONFIG_RT_SECOND_CARD=7612 or CONFIG_RT_FIRST_CARD=7602 (ITxBfEn,ETxBfeeEn,ETxBfEnCond variables 0/1, see rtmp.h).<br>
6) need add multiif support in iappd daemon.<br>
7) need add subchannel select for 5GHz module.<br>
8) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
9) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
10) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
11) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
12) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
13) in fair fair future: need add perip shaper script and webui .<br>
<br>
<br>
<br>